--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,18 +2,24 @@ body{
   font-family: 'Dancing Script';
   background-color: #02010a;
 }
-#main-header{
+.content {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+.main-header{
   background-color: #5b7989;
   color: white;
   text-shadow: 20px #02010a;
-  border-radius: 10px;
+  border-radius: 10px 10px 0px 0px;
+  height: 60px;
 }
 h1{
   padding-left: 10px;
   padding-top: 10px;
   padding-bottom: 10px;
 }
-#main-header a{
+.main-header a{
   color: white;
 }
 nav {
@@ -30,8 +36,40 @@ nav ul li{
   display: inline-block;
   font-size: 20px;
 }
-@media (max-width: 900px) {
-  #main-header{
+.imagen-central{
+  background-color: #82c3a6;
+  width: 100%;
+}
+.imagen-central img {
+  display: block;
+  margin: auto;
+  width: 700px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+.imagen-secundaria{
+    background-color: #d5c75f;
+}
+@media (max-width: 378px) {
+  .main-header{
+    height: 130px;
+  }
+  h1{
+    text-align: center;
+  }
+  nav{
+    float: none;
+    text-align: center;
+  }
+  nav ul{
+    margin-top: -20px;
+  }
+  .imagen-central img {
+    width: 90%;
+  }
+}
+@media (min-width: 378px) and (max-width:900px) {
+  .main-header{
     height: 90px;
   }
   h1{
@@ -43,5 +81,8 @@ nav ul li{
   }
   nav ul{
     margin-top: -20px;
+  }
+  .imagen-central img {
+    width: 70%;
   }
 }
