--- a/css/estilos.css
+++ b/css/estilos.css
@@ -11,8 +11,6 @@ body{
 }
 .content div{
   box-sizing: border-box;
-  padding-top: 20px;
-  padding-bottom: 20px;
   margin: auto;
 }
 .main-header{
@@ -20,7 +18,7 @@ body{
   color: white;
   text-shadow: 20px #02010a;
   border-radius: 10px 10px 0px 0px;
-  height: 60px;
+  height: 80px;
   width: 100%
 }
 h1{
@@ -38,6 +36,7 @@ nav ul{
   padding: 0;
   list-style: none;
   padding-right: 10px;
+  margin-top: -60px;
 }
 nav ul li{
   display: inline-block;
@@ -46,7 +45,8 @@ nav ul li{
 .imagen-central{
   background-color: #82c3a6;
   width: 100%;
-  height: 530px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 .imagen-central img {
   display: block;
@@ -60,11 +60,10 @@ nav ul li{
     width: 100%;
   	display: flex;
   	flex-flow: row wrap;
+    padding-top: 20px;
 }
 .imagen-secundaria div{
   box-sizing: border-box;
-  padding-top: 20px;
-  padding-bottom: 20px;
   margin: auto;
 }
 .imagen-secundaria h2{
@@ -117,8 +116,8 @@ nav ul li{
   box-sizing: border-box;
   padding-top: 20px;
   padding-bottom: 20px;
-  margin-right: auto;
-  margin-left: auto;
+  margin: auto;
+  margin-top: 0px;
 }
 .galeria{
     background-color: #d5c75f;
@@ -178,7 +177,7 @@ nav ul li{
 }
 @media (max-width: 378px) {
   .main-header{
-    height: 130px;
+    height: 150px;
   }
   h1{
     text-align: center;
@@ -218,7 +217,7 @@ nav ul li{
 }
 @media (min-width: 378px) and (max-width:900px) {
   .main-header{
-    height: 90px;
+    height: 110px;
   }
   h1{
     text-align: center;
